# python_cli_template

./: .gitignore  README.md  pyproject.toml  setup.py
trigger/: log.py  trigger_logic.py
trigger/cli/: cmdoptions.py  cmdparser.py  commands.py  main.py  utils.py
